--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,8 +20,8 @@ repos:
       - id: check-added-large-files
       - id: mixed-line-ending
       - id: detect-private-key
-      # - id: no-commit-to-branch
-      #   args: [--branch, main]
+      - id: no-commit-to-branch
+        args: [--branch, main]
 
   - repo: https://github.com/compilerla/conventional-pre-commit
     rev: v2.1.1
