feat: initial mkdocs site

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-TF_VAR_app_name=trivialsec-docs
-APP_NAME=${TF_VAR_app_name}
-CI_BUILD_REF=local
+APP_ENV=Dev
+APP_NAME=user-docs
+TF_VAR_app_env=${APP_ENV}
+TF_VAR_app_name=${APP_NAME}
