--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,8 +20,8 @@ repos:
       - id: check-added-large-files
       - id: mixed-line-ending
       - id: detect-private-key
-      # - id: no-commit-to-branch
-      #   args: [--branch, main]
+      - id: no-commit-to-branch
+        args: [--branch, main]
 
   - repo: https://github.com/compilerla/conventional-pre-commit
     rev: v2.1.1
@@ -65,4 +65,4 @@ repos:
           - --args=--skip-download
           - --args=--quiet
           - --args=--framework terraform
-          # - --args=--skip-check
+          - --args=--skip-check CKV_AWS_18,CKV_AWS_21,CKV2_AWS_47,CKV_AWS_68,CKV_AWS_86,CKV_AWS_144,CKV_AWS_145
