--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -65,4 +65,4 @@ repos:
           - --args=--skip-download
           - --args=--quiet
           - --args=--framework terraform
-          - --args=--skip-check CKV_AWS_18,CKV_AWS_21,CKV2_AWS_47,CKV_AWS_68,CKV_AWS_86,CKV_AWS_144,CKV_AWS_145
+          - --args=--skip-check CKV_AWS_18,CKV_AWS_21,CKV2_AWS_47,CKV2_AWS_61,CKV2_AWS_62,CKV_AWS_68,CKV_AWS_86,CKV_AWS_144,CKV_AWS_145,CKV_AWS_310
