--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,7 @@ repos:
         args: [--branch, main]
 
   - repo: https://github.com/compilerla/conventional-pre-commit
-    rev: v2.1.1
+    rev: v2.2.0
     hooks:
       - id: conventional-pre-commit
         stages: [commit-msg]
@@ -41,7 +41,7 @@ repos:
         args: ["--domains", "trivialsec.com"]
 
   - repo: https://github.com/crate-ci/typos
-    rev: v1.14.6
+    rev: typos-dict-v0.9.26
     hooks:
       - id: typos
         files: src
@@ -52,12 +52,12 @@ repos:
       - id: remove-tabs
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.0-alpha.6
+    rev: v3.0.0-alpha.9-for-vscode
     hooks:
       - id: prettier
 
   - repo: https://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.77.2
+    rev: v1.79.1
     hooks:
       - id: terraform_validate
       - id: terraform_checkov
