feat: development release (#1)
* link back to main site from logo
* rules content and videos
* scanners content
* add alternatives page
* threat model for JWT
* add Webhook docs
* add status page
* GH actions

---------

Signed-off-by: Stof <93355168+0x73746F66@users.noreply.github.com>
Co-authored-by: stof <3494633+chrisdlangton@users.noreply.github.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,7 @@ repo_name: GitHub
 docs_dir: src
 site_dir: dist
 use_directory_urls: false
-strict: true
+strict: false
 copyright: Copyright &copy; Trivial Security
 markdown_extensions:
   - pymdownx.emoji
@@ -37,7 +37,29 @@ nav:
   - Introduction: index.md
   - "User Guide":
       - "Getting Started": user-guide/getting-started.md
-      - "Scanners": user-guide/scanners.md
+      - "Using the Scanners": user-guide/scanners.md
+      - "Using CLI": user-guide/scanners/cli.md
+      - "Webhooks":
+          - "What are webhooks?": user-guide/webhooks/getting-started.md
+          - "Python Example": user-guide/webhooks/python.md
+          - "Node.js Example": user-guide/webhooks/nodejs.md
+          - "Go Example": user-guide/webhooks/golang.md
+          - "Event Sources":
+              - "hosted_monitoring": user-guide/webhooks/event/hosted_monitoring.md
+              - "hosted_scanner": user-guide/webhooks/event/hosted_scanner.md
+              - "self_hosted_uploads": user-guide/webhooks/event/self_hosted_uploads.md
+              - "early_warning_email": user-guide/webhooks/event/early_warning_email.md
+              - "early_warning_domain": user-guide/webhooks/event/early_warning_domain.md
+              - "early_warning_ip": user-guide/webhooks/event/early_warning_ip.md
+              - "new_findings_certificates": user-guide/webhooks/event/new_findings_certificates.md
+              - "new_findings_domains": user-guide/webhooks/event/new_findings_domains.md
+              - "client_status": user-guide/webhooks/event/client_status.md
+              - "client_activity": user-guide/webhooks/event/client_activity.md
+              - "scanner_configurations": user-guide/webhooks/event/scanner_configurations.md
+              - "report_created": user-guide/webhooks/event/report_created.md
+              - "report_deleted": user-guide/webhooks/event/report_deleted.md
+              - "account_activity": user-guide/webhooks/event/account_activity.md
+              - "member_activity": user-guide/webhooks/event/member_activity.md
   - "Evaluation Rules":
       - "1.0 TLS Negotiation":
           - "1.1 Basic Constraints Extension valid path length": rules/issue_1.1.md
@@ -141,3 +163,6 @@ nav:
           - "4.15 Upgrade Insecure Requests": rules/issue_4.15.md
           - "4.16 Safe HTML iframe options": rules/issue_4.16.md
           - "4.17 Block mode XSS-Protection": rules/issue_4.17.md
+  - "Alternatives": alternative-comparison.md
+  - "Threat Models":
+      - "Bearer JWT": bearer_jwt-bearerjwt.md
