--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,7 @@ repos:
         args: [--branch, main]
 
   - repo: https://github.com/compilerla/conventional-pre-commit
-    rev: v2.1.1
+    rev: v2.2.0
     hooks:
       - id: conventional-pre-commit
         stages: [commit-msg]
@@ -35,29 +35,29 @@ repos:
       - id: license-check-npm
 
   - repo: https://github.com/homebysix/pre-commit-macadmin
-    rev: v1.12.3
+    rev: v1.12.4
     hooks:
       - id: check-git-config-email
         args: ["--domains", "trivialsec.com"]
 
   - repo: https://github.com/crate-ci/typos
-    rev: v1.13.6
+    rev: typos-dict-v0.9.26
     hooks:
       - id: typos
         files: src
 
   - repo: https://github.com/Lucas-C/pre-commit-hooks
-    rev: v1.3.1
+    rev: v1.5.1
     hooks:
       - id: remove-tabs
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.0-alpha.4
+    rev: v3.0.0-alpha.9-for-vscode
     hooks:
       - id: prettier
 
   - repo: https://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.77.0
+    rev: v1.79.1
     hooks:
       - id: terraform_validate
       - id: terraform_checkov
@@ -65,4 +65,4 @@ repos:
           - --args=--skip-download
           - --args=--quiet
           - --args=--framework terraform
-          - --args=--skip-check CKV_AWS_18,CKV_AWS_21,CKV2_AWS_47,CKV_AWS_68,CKV_AWS_86,CKV_AWS_144,CKV_AWS_145
+          - --args=--skip-check CKV_AWS_18,CKV_AWS_21,CKV2_AWS_47,CKV2_AWS_61,CKV2_AWS_62,CKV_AWS_68,CKV_AWS_86,CKV_AWS_144,CKV_AWS_145,CKV_AWS_310
