--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: Docs
+name: Build
 
 on:
   pull_request:
@@ -10,6 +10,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
+      - name: hcltm validate
+        uses: xntrik/hcltm-action@latest
+        with:
+          command: validate
+          files: "./threatmodels/*"
 
       - name: Upgrade pip
         run: |+
